--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     </p>
                     <p class="mb-10 text-lg">
                         <span class="block mb-2">Telp: <a href="tel:0100200340" class="hover:text-yellow-600 transition">010-020-0340</a></span>
-                        <span class="block">Email: <a href="mailto:info@company.com" class="hover:text-yellow-600 transition">info@company.com</a></span>                        
+                        <span class="block">Email: <a href="mailto:darmawanputu355@gmail.com" class="hover:text-yellow-600 transition">info@company.com</a></span>                        
                     </p>
                     <div class="text-center">
                         <a href="https://www.google.com/maps" class="inline-block text-white text-2xl pl-10 pr-12 py-6 rounded-lg transition tm-bg-green">
