--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
                     <p class="text-white leading-8 text-sm font-light">
                         Antique Cafe adalah tempat sempurna untuk menikmati kopi yang otentik dengan suasana vintage yang memikat. Dengan dekorasi bergaya klasik, setiap sudut kafe ini menghidupkan kembali kenangan masa lalu yang penuh kehangatan. 
                         Kami menghadirkan beragam pilihan kopi, dari espresso hingga racikan khas yang dibuat dengan penuh cinta oleh barista kami. Tidak hanya kopi, Antique Cafe juga menawarkan hidangan ringan dan pencuci mulut yang diracik untuk melengkapi pengalaman bersantap Anda.
-                    	Jika Anda memiliki pertanyaan, <a rel="nofollow" href="" target="wa.me/6281353469703">kirimkan pesan kepada kami</a>. </p>
+                    	Jika Anda memiliki pertanyaan, <a rel="nofollow" href="" target="https://wa.me/6281353469703
+                        ">kirimkan pesan kepada kami</a>. </p>
                 </div>
                 <div class="text-center">
                     <div class="inline-block">
@@ -133,10 +134,11 @@
                 <div class="bg-white bg-opacity-80 p-12 pb-14 rounded-xl mb-5">
                     <h2 class="mb-6 tm-text-green text-4xl font-medium">Tentang kafe kami</h2>
                     <p class="mb-6 text-base leading-8">
-                        Gambar-gambar diambil dari Pexels, sebuah situs foto stok yang bagus. Template ini menggunakan Tailwind CSS. Anda dapat memodifikasi template Antique Cafe sesuai kebutuhan Anda.
+                        Antique Cafe adalah tempat di mana kenangan masa lalu bertemu dengan cita rasa masa kini. Dengan desain interior bergaya vintage yang memikat, setiap sudut kafe kami dirancang untuk menghadirkan suasana hangat dan nostalgia. 
+                        Antique Cafe menjadi tempat yang sempurna untuk bersantai, berbincang bersama teman, atau sekadar menikmati momen tenang dengan secangkir kopi. Kunjungi kami dan rasakan sendiri pesona dan kehangatan Antique Cafe. Di sini, setiap kunjungan Anda bukan hanya tentang kopi, tetapi juga tentang menciptakan kenangan yang berharga.
                   </p>
                     <p class="text-base leading-8">
-                        Jika Anda ingin <a rel="nofollow" href="https://www.tooplate.com/contact" target="_parent">mendukung kami</a>, silakan lakukan donasi kecil melalui PayPal. Itu akan sangat membantu. Cara lain adalah dengan memberi tahu teman-teman Anda tentang situs Tooplate. Terima kasih. </p>
+                        Jika Anda ingin <a rel="nofollow" href="https://maps.app.goo.gl/7EsyA3uezZuRWxrX6" target="_parent">mengunjungi kami</a>, silakan datang ke lokasi kami untuk mencari kopi favorit kalian </p>
                 </div>
                 <a href="#contact" class="inline-block tm-bg-green transition text-white text-xl pt-3 pb-4 px-8 rounded-md">
                     <i class="far fa-comments mr-4"></i>
@@ -156,10 +158,10 @@
                     </p>
                     <p class="mb-10 text-lg">
                         <span class="block mb-2">Telp: <a href="tel:0100200340" class="hover:text-yellow-600 transition">010-020-0340</a></span>
-                        <span class="block">Email: <a href="mailto:darmawanputu355@gmail.com" class="hover:text-yellow-600 transition">info@company.com</a></span>                        
+                        <span class="block">Email: <a href="mailto:darmawanputu355@gmail.com" class="hover:text-yellow-600 transition">darmawanputu355@gamil.com</a></span>                        
                     </p>
                     <div class="text-center">
-                        <a href="https://www.google.com/maps" class="inline-block text-white text-2xl pl-10 pr-12 py-6 rounded-lg transition tm-bg-green">
+                        <a href="https://maps.app.goo.gl/7EsyA3uezZuRWxrX6" class="inline-block text-white text-2xl pl-10 pr-12 py-6 rounded-lg transition tm-bg-green">
                             <i class="fas fa-map-marked-alt mr-8"></i>
                             Buka Peta
                         </a>
@@ -179,7 +181,7 @@
             <footer class="absolute bottom-0 left-0 w-full">
                 <div class="text-white container mx-auto tm-container p-8 text-lg flex flex-col md:flex-row justify-between">
                     <span>Hak Cipta 2022 Antique Cafe. Semua hak dilindungi.</span>
-                    <span class="mt-5 md:mt-0">Desain: <a href="https://www.tooplate.com" target="_parent">Tooplate</a></span>
+                    <span class="mt-5 md:mt-0">By: <a href="https://www.tooplate.com" target="_parent">darmawan</a></span>
                 </div>                
             </footer>
         </div>        
