--- a/index.html
+++ b/index.html
@@ -34,10 +34,13 @@
                 </div>    
                 <div class="bg-black bg-opacity-70 p-10 mb-5">
                     <p class="text-white leading-8 text-sm font-light">
-                        Antique Cafe adalah tempat sempurna untuk menikmati kopi yang otentik dengan suasana vintage yang memikat. Dengan dekorasi bergaya klasik, setiap sudut kafe ini menghidupkan kembali kenangan masa lalu yang penuh kehangatan. 
-                        Kami menghadirkan beragam pilihan kopi, dari espresso hingga racikan khas yang dibuat dengan penuh cinta oleh barista kami. Tidak hanya kopi, Antique Cafe juga menawarkan hidangan ringan dan pencuci mulut yang diracik untuk melengkapi pengalaman bersantap Anda.
-                    	Jika Anda memiliki pertanyaan, <a rel="nofollow" href="" target="https://wa.me/6281353469703
-                        ">kirimkan pesan kepada kami</a>. </p>
+                        Antique Cafe adalah tempat sempurna untuk menikmati kopi yang otentik dengan suasana vintage yang memikat. 
+                        Dengan dekorasi bergaya klasik, setiap sudut kafe ini menghidupkan kembali kenangan masa lalu yang penuh kehangatan. 
+                        Kami menghadirkan beragam pilihan kopi, dari espresso hingga racikan khas yang dibuat dengan penuh cinta oleh barista kami. 
+                        Tidak hanya kopi, Antique Cafe juga menawarkan hidangan ringan dan pencuci mulut yang diracik untuk melengkapi pengalaman bersantap Anda.
+                        Jika Anda memiliki pertanyaan, 
+                        <a rel="nofollow" href="https://wa.me/6281353469703" target="_blank">kirimkan pesan kepada kami</a>.
+                    </p>
                 </div>
                 <div class="text-center">
                     <div class="inline-block">
