--- a/index.html
+++ b/index.html
@@ -156,12 +156,14 @@
                 <div class="flex-1 rounded-xl px-10 py-12 m-5 bg-white bg-opacity-80 tm-item-container">
                     <h2 class="text-3xl mb-6 tm-text-green">Hubungi Kami</h2>
                     <p class="mb-6 text-lg leading-8">
-                        Praesent tellus magna, consectetur sit amet volutpat eu, pulvinar vitae sem.
-                        bg putih 80% alpha. btn #066    
+                        Kami selalu siap membantu Anda! Jangan ragu untuk menghubungi kami melalui telepon, email, atau tombol di bawah ini. 
+                        Kepuasan Anda adalah prioritas kami.
                     </p>
                     <p class="mb-10 text-lg">
-                        <span class="block mb-2">Telp: <a href="tel:0100200340" class="hover:text-yellow-600 transition">010-020-0340</a></span>
-                        <span class="block">Email: <a href="mailto:darmawanputu355@gmail.com" class="hover:text-yellow-600 transition">darmawanputu355@gamil.com</a></span>                        
+                        <span class="block mb-2">Telp: <a href="tel:+6281353469703" class="hover:text-yellow-600 transition">010-020-0340</a></span>
+                        <span class="block">Email: <a href="mailto:darmawanputu355@gmail.com" class="hover:text-yellow-600 transition">darmawanputu355@gmail.com</a></span>  
+                        <span class="block mb-2">Instagram: <a href="https://www.instagram.com/pridemaa_13" target="_blank" class="hover:text-yellow-600 transition">@pridemaa_13</a></span>
+                        <span class="block">Facebook: <a href="https://www.facebook.com/share/18dcaHve1C/?mibextid=wwXIfr" target="_blank" class="hover:text-yellow-600 transition">facebook Link</a></span>
                     </p>
                     <div class="text-center">
                         <a href="https://maps.app.goo.gl/7EsyA3uezZuRWxrX6" class="inline-block text-white text-2xl pl-10 pr-12 py-6 rounded-lg transition tm-bg-green">
