--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                         Kepuasan Anda adalah prioritas kami.
                     </p>
                     <p class="mb-10 text-lg">
-                        <span class="block mb-2">Telp: <a href="tel:+6281353469703" class="hover:text-yellow-600 transition">010-020-0340</a></span>
+                        <span class="block mb-2">Telp: <a href="tel:+6281353469703" class="hover:text-yellow-600 transition">+6281353469703</a></span>
                         <span class="block">Email: <a href="mailto:darmawanputu355@gmail.com" class="hover:text-yellow-600 transition">darmawanputu355@gmail.com</a></span>  
                         <span class="block mb-2">Instagram: <a href="https://www.instagram.com/pridemaa_13" target="_blank" class="hover:text-yellow-600 transition">@pridemaa_13</a></span>
                         <span class="block">Facebook: <a href="https://www.facebook.com/share/18dcaHve1C/?mibextid=wwXIfr" target="_blank" class="hover:text-yellow-600 transition">facebook Link</a></span>
